[package]
name = "brawl_stars_api"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["brawl", "stars", "gamedev"]
categories = ["api-bindings"]
description = "A Rust crate to interact with the Brawl Stars API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
