[package]
name = "brawl_stars_api"
version = "0.1.4"
edition = "2021"
license = "MIT"
keywords = ["brawl", "stars", "gamedev"]
categories = ["api-bindings"]
description = "A Rust crate to interact with the Brawl Stars API"
repository = "https://github.com/Mathletesv/brawl_stars_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
